[ALLI-4146] [ALLI-4149] Fixes to holdings.
Axiell:
- Fix a bug where no holdings were shown when only one holding item was
  available.
- Show search results holdings summary status as 'ordered' for ordered
  items when no due date is available.
- Fix collapse settings.

Voyager:
- Show 'x available' notification in Voyager holdings only
  when all holdings are not visible (the holdings field is truncated).
- Refactor CSS.

--- a/themes/finna/less/bootstrap/finna/holdings.less
+++ b/themes/finna/less/bootstrap/finna/holdings.less
@@ -6,13 +6,13 @@
     clear: both;
     & .available-total {
         float: left;
-        margin-left: 10px;
         & span {
             margin-left: 5px;
         }
     }
     & .dedupInformation {
         float: left;
+        margin-right: 10px;
     }
     & .holdings, .holdings-container, .no-holdings, .availability-load-indicator {
         clear: both;
